<resources>
    <string name="app_name">LR2</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_plusminus">+/-</string>
    <string name="button_add">+</string>
    <string name="button_subtract">-</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>
    <string name="button_equals">=</string>
    <string name="button_decimal">.</string>
    <string name="button_percent">%</string>
    <string name="button_ac">AC</string>
    <string name="button_c">C</string>
    <string name="button_backspace">⌫</string>
    <string name="button_mr">MR</string>
    <string name="button_m_minus">M-</string>
    <string name="button_m_plus">M+</string>
    <string name="button_mc">MC</string>
    <string name="button_e">e</string>
    <string name="button_pi">π</string>
    <string name="button_root_y">x^(1/y)</string>
    <string name="button_power_y">x^y</string>
    <string name="button_log_y">log_y</string>
    <string name="button_exponent">EE</string>
    <string name="button_power_3">x^3</string>
    <string name="button_power_2">x^2</string>
    <string name="button_power_invert">x^-1</string>
    <string name="button_sqrt">sqrt</string>
    <string name="button_tan">tan</string>
    <string name="button_cos">cos</string>
    <string name="button_sin">sin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_power_x">y^x</string>
    <string name="button_cubrt">cubrt</string>
    <string name="button_ln">ln</string>
    <string name="button_log10">log10</string>
    <string name="button_log2">log2</string>
    <string name="button_arctan">tan^-1</string>
    <string name="button_arccos">cos^-1</string>
    <string name="button_arcsin">sin^-1</string>
    <string name="button_factorial">x!</string>
    <string name="button_random">RND</string>
    <string name="button_sinh">sinh</string>
    <string name="button_cosh">cosh</string>
    <string name="button_tanh">tanh</string>
    <string name="button_arcsinh">sinh^-1</string>
    <string name="button_arccosh">cosh^-1</string>
    <string name="button_arctanh">tanh^-1</string>
</resources>
