<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/basicBlockLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasicBlock">


    <Button
        android:id="@+id/buttonC"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/button2"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_2"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_6"
        app:layout_constraintEnd_toEndOf="@+id/button9"
        app:layout_constraintStart_toStartOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_multiply"
        app:layout_constraintEnd_toEndOf="@+id/buttonDivide"
        app:layout_constraintStart_toStartOf="@+id/buttonDivide"
        app:layout_constraintTop_toTopOf="@+id/button9" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_equals"
        app:layout_constraintEnd_toEndOf="@+id/buttonPlus"
        app:layout_constraintStart_toStartOf="@+id/buttonPlus"
        app:layout_constraintTop_toTopOf="@+id/button0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button7"
        app:layout_constraintStart_toStartOf="@+id/button7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_add"
        app:layout_constraintEnd_toEndOf="@+id/buttonMinus"
        app:layout_constraintStart_toStartOf="@+id/buttonMinus"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <Button
        android:id="@+id/button1"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_9"
        app:layout_constraintEnd_toEndOf="@+id/buttonPercent"
        app:layout_constraintStart_toStartOf="@+id/buttonPercent"
        app:layout_constraintTop_toTopOf="@+id/button8" />

    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:width="70sp"
        android:height="40sp"
        android:text="@string/button_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/button3"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_3"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_5"
        app:layout_constraintEnd_toEndOf="@+id/button8"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonC"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonC"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/button8"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_8"
        app:layout_constraintEnd_toEndOf="@+id/buttonPlusMinus"
        app:layout_constraintStart_toStartOf="@+id/buttonPlusMinus"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonPercent" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_subtract"
        app:layout_constraintEnd_toEndOf="@+id/buttonMultiply"
        app:layout_constraintStart_toStartOf="@+id/buttonMultiply"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <Button
        android:id="@+id/buttonPercent"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonPlusMinus" />

    <Button
        android:id="@+id/buttonDecimal"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_decimal"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button0" />

    <Button
        android:id="@+id/buttonPlusMinus"
        android:layout_width="55sp"
        android:layout_height="40sp"
        android:width="55sp"
        android:height="40sp"
        android:text="@string/button_plusminus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonC" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>