<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scientific3Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Scientific3">


        <Button
            android:id="@+id/buttonArccosh"
            android:layout_width="55sp"
            android:layout_height="55sp"
            android:layout_marginTop="15dp"
            android:width="55sp"
            android:height="55sp"
            android:text="@string/button_arccosh"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/buttonArctanh"
            app:layout_constraintStart_toStartOf="@+id/buttonArctanh"
            app:layout_constraintTop_toBottomOf="@+id/buttonArctanh" />

        <Button
            android:id="@+id/buttonTanh"
            android:layout_width="55sp"
            android:layout_height="55sp"
            android:layout_marginTop="15dp"
            android:width="55sp"
            android:height="55sp"
            android:text="@string/button_tanh"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/buttonRandom"
            app:layout_constraintStart_toStartOf="@+id/buttonRandom"
            app:layout_constraintTop_toBottomOf="@+id/buttonRandom" />

        <Button
            android:id="@+id/buttonSinh"
            android:layout_width="55sp"
            android:layout_height="55sp"
            android:layout_marginTop="17dp"
            android:width="55sp"
            android:height="55sp"
            android:text="@string/button_sinh"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/buttonCosh"
            app:layout_constraintStart_toStartOf="@+id/buttonCosh"
            app:layout_constraintTop_toBottomOf="@+id/buttonCosh" />

        <Button
            android:id="@+id/buttonArctanh"
            android:layout_width="55sp"
            android:layout_height="55sp"
            android:layout_marginTop="15dp"
            android:width="55sp"
            android:height="55sp"
            android:text="@string/button_arctanh"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/buttonFactorial"
            app:layout_constraintStart_toStartOf="@+id/buttonFactorial"
            app:layout_constraintTop_toBottomOf="@+id/buttonFactorial" />

        <Button
            android:id="@+id/buttonArcsinh"
            android:layout_width="55sp"
            android:layout_height="55sp"
            android:layout_marginTop="17dp"
            android:width="55sp"
            android:height="55sp"
            android:text="@string/button_arcsinh"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/buttonArccosh"
            app:layout_constraintStart_toStartOf="@+id/buttonArccosh"
            app:layout_constraintTop_toBottomOf="@+id/buttonArccosh" />

        <Button
            android:id="@+id/buttonRandom"
            android:layout_width="55sp"
            android:layout_height="55sp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="15dp"
            android:width="55sp"
            android:height="55sp"
            android:text="@string/button_random"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/buttonTanh"
            app:layout_constraintStart_toEndOf="@+id/buttonFactorial"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonCosh"
            android:layout_width="55sp"
            android:layout_height="55sp"
            android:layout_marginTop="15dp"
            android:width="55sp"
            android:height="55sp"
            android:text="@string/button_cosh"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/buttonTanh"
            app:layout_constraintStart_toStartOf="@+id/buttonTanh"
            app:layout_constraintTop_toBottomOf="@+id/buttonTanh" />

        <Button
            android:id="@+id/buttonFactorial"
            android:layout_width="55sp"
            android:layout_height="55sp"
            android:layout_marginBottom="15dp"
            android:width="55sp"
            android:height="55sp"
            android:text="@string/button_factorial"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/buttonArctanh"
            app:layout_constraintEnd_toStartOf="@+id/buttonRandom"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>