<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scientific2Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Scientific2">


        <Button
            android:id="@+id/buttonLog10"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="55sp"
            android:layout_height="40sp"
            android:width="55sp"
            android:height="55sp"
            android:text="@string/button_log10"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/buttonLn"
            app:layout_constraintStart_toStartOf="@+id/buttonLn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65999997" />

        <Button
            android:id="@+id/buttonArctan"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="55sp"
            android:layout_height="40sp"
            android:width="55sp"
            android:height="55sp"
            android:text="@string/button_arctan"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonLn"
            app:layout_constraintEnd_toEndOf="@+id/buttonCubrt"
            app:layout_constraintStart_toStartOf="@+id/buttonCubrt"
            app:layout_constraintTop_toTopOf="@+id/buttonLn" />

        <Button
            android:id="@+id/buttonArcsin"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="55sp"
            android:layout_height="40sp"
            android:width="55sp"
            android:height="55sp"
            android:text="@string/button_arcsin"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonLog2"
            app:layout_constraintEnd_toEndOf="@+id/buttonArccos"
            app:layout_constraintStart_toStartOf="@+id/buttonArccos"
            app:layout_constraintTop_toTopOf="@+id/buttonLog2" />

        <Button
            android:id="@+id/buttonLn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="55sp"
            android:layout_height="40sp"
            android:width="55sp"
            android:height="55sp"
            android:text="@string/button_ln"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/buttonFactorial"
            app:layout_constraintStart_toStartOf="@+id/buttonFactorial"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32999998" />

        <Button
            android:id="@+id/buttonLog2"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="55sp"
            android:layout_height="40sp"
            android:width="55sp"
            android:height="55sp"
            android:text="@string/button_log2"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/buttonLog10"
            app:layout_constraintStart_toStartOf="@+id/buttonLog10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/buttonCubrt"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="55sp"
            android:layout_height="40sp"
            android:width="55sp"
            android:height="55sp"
            android:text="@string/button_cubrt"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonFactorial"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonFactorial" />

        <Button
            android:id="@+id/buttonArccos"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="55sp"
            android:layout_height="40sp"
            android:width="55sp"
            android:height="55sp"
            android:text="@string/button_arccos"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonLog10"
            app:layout_constraintEnd_toEndOf="@+id/buttonArctan"
            app:layout_constraintStart_toStartOf="@+id/buttonArctan"
            app:layout_constraintTop_toTopOf="@+id/buttonLog10" />

        <Button
            android:id="@+id/buttonFactorial"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="55sp"
            android:layout_height="40sp"
            android:width="55sp"
            android:height="55sp"
            android:text="@string/button_factorial"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>